# reeve

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/reeve/: Cargo.toml  README.md
crates/reeve-engine/: Cargo.toml  README.md
crates/reeve-engine/src/: budget.rs  lib.rs  outcome.rs
crates/reeve-engine/src/evaluation/: fingerprint.rs  health_score.rs  heuristic.rs  llm_judge.rs  mod.rs
crates/reeve-engine/src/policy/: config.rs  dsl.rs  mod.rs
crates/reeve-ingestion/: Cargo.toml  README.md
crates/reeve-ingestion/src/: assemble.rs  lib.rs  normalize.rs  pricing.rs  proxy.rs  receive.rs  route.rs  secrets.rs  sse.rs  threading.rs
crates/reeve-ingestion/tests/: corpus.rs
crates/reeve-ingestion/tests/fixtures/concurrent-side-call/: manifest.json  req1.json  req2.json  resp1.json  resp2.json  side-resp.json  side.json
crates/reeve-ingestion/tests/fixtures/credential-bearing-body/: manifest.json  req1.json  resp1.json
crates/reeve-ingestion/tests/fixtures/cruel-chunking/: manifest.json  req1.json  resp1.sse
crates/reeve-ingestion/tests/fixtures/errored-tool-result/: manifest.json  req1.json  req2.json  resp1.json  resp2.json
crates/reeve-ingestion/tests/fixtures/moving-cache-control/: manifest.json  req1.json  req2.json  resp1.json  resp2.json
crates/reeve-ingestion/tests/fixtures/thinking-and-compaction/: manifest.json  req1.json  resp1.json
crates/reeve-intervention/: Cargo.toml  README.md  build.rs
crates/reeve-intervention/src/: dispatcher.rs  lib.rs  server.rs  types.rs
crates/reeve-model/: Cargo.toml  README.md
crates/reeve-model/src/: ids.rs  lib.rs  scoring.rs  signal.rs
crates/reeve-model/src/entity/: agent.rs  cost.rs  evaluation.rs  intervention.rs  mod.rs  outcome.rs  policy.rs  replay.rs  span.rs  span_event.rs  span_note.rs  trace.rs
crates/reeve-renderer/: Cargo.toml  README.md
crates/reeve-renderer/src/: app.rs  ascii.rs  clipboard.rs  context_windows.rs  errors.rs  impact.rs  input.rs  layout.rs  lib.rs  mouse.rs  replay.rs  theme.rs
crates/reeve-renderer/src/panels/: center.rs  confirm.rs  cost_view.rs  degraded.rs  fatal.rs  focus_list.rs  footer.rs  header.rs  help.rs  history.rs  impact_view.rs  left.rs  mod.rs  note_input.rs  overlay.rs  palette.rs  right.rs  scrubber.rs  skeleton.rs  toast.rs
crates/reeve-renderer/src/widgets/: health_gauge.rs  mod.rs  sparkline.rs  streaming_box.rs  trace_tree.rs
crates/reeve-renderer/themes/: frappe.toml  latte.toml  macchiato.toml  mocha.toml  tokyo-night.toml
crates/reeve-sdk/: Cargo.toml  README.md  build.rs
crates/reeve-sdk/proto/: reeve.proto
crates/reeve-sdk/src/: checkpoint.rs  lib.rs  span.rs
crates/reeve-storage/: Cargo.toml  README.md
crates/reeve-storage/migrations/: 0001_initial.sql  0002_cot_json.sql  0003_policy_rules_description.sql  0004_policy_cooldowns.sql  0005_resumable_traces.sql
crates/reeve-storage/src/: hot.rs  lib.rs  warm.rs
crates/reeve/src/: main.rs
docs/: ARCHITECTURE.md
docs/adr/: 0001-two-channel-architecture.md  0002-local-first-llm-judge.md  0003-apache-2-license.md  0004-clock-offset-estimation.md  0005-versioned-attribute-translator.md  0006-privacy-tier-1-default.md  0007-weight-renormalization.md  0008-root-triggered-straggler-window.md  0009-orphan-adoption-for-span-assembly.md  0010-rusqlite-over-sqlx-for-warm-tier.md  0011-root-span-determines-trace-failure.md  0012-lazy-agent-registration-at-trace-finalization.md  0013-proto-codegen-boundary.md  0014-trace-status-seven-state-machine.md  0015-broadcast-channel-for-pipeline-renderer-signal-bus.md  0016-renderer-subscribes-to-route-stage-directly.md  0017-indexmap-for-agent-registry-in-renderer.md  0018-warmstore-created-in-main-and-shared-via-arc.md  0019-separate-ingestion-and-engine-event-channels.md  0020-composite-health-score.md  0021-tier2-llm-judge.md  0022-evalexpr-policy-dsl.md  0023-grpc-control-channel-protocol.md  0024-command-expiry-via-valid-until-ms.md  0025-audit-trail-format-and-attribution.md  0026-ntp-style-clock-sync-via-control-handshake.md  0027-checkpoint-as-polling-primitive.md  0028-python-sdk-adapter-via-framework-callbacks.md  0029-engine-to-dispatcher-channel.md  0030-instant-reconstitution-from-wall-clock-timestamps.md  0031-canonical-agent-identity-across-channels.md  0032-cross-trace-outcome-measurement.md  0033-clipboard-via-osc-52.md  0034-effectiveness-memory-keyed-by-rule-identity.md  0035-privacy-tier-read-once-fails-closed.md  0036-proxy-agent-identity-from-user-agent.md  0037-conversation-threading-from-message-prefixes.md  0038-proxy-command-application-on-next-request.md  0039-circuit-breaker-kill-on-the-proxy-path.md  0040-loop-detection-by-dominance.md  (+4 more)
docs/guides/: cockpit.md  configuration.md  custom-agents.md  getting-started.md  proxy-path.md
migrations/: 0001_initial.sql  0006_indices.sql
proto/: reeve.proto
sdk/python/: README.md  pyproject.toml
sdk/python/reeve/: __init__.py  sdk.py
sdk/python/reeve/adapters/: __init__.py  claude_agent.py  langchain.py  openai_agents.py
sdk/python/reeve/proto/: reeve_pb2.py  reeve_pb2_grpc.py
sdk/python/reeve_sdk/: __init__.py  sdk.py
sdk/python/reeve_sdk/adapters/: __init__.py  claude_agent.py  langchain.py  openai_agents.py
sdk/python/reeve_sdk/proto/: reeve_pb2_grpc.py
sdk/python/tests/: _otel.py  conftest.py  test_claude_agent_adapter.py  test_openai_agents_adapter.py  test_sdk.py
themes/: dracula.toml  gruvbox.toml  mocha.toml  nord.toml
tools/soak/: README.md  drive.py  mock_upstream.py  sample.py
