[workspace]
members = [
    "crates/reeve",
    "crates/reeve-model",
    "crates/reeve-storage",
    "crates/reeve-ingestion",
    "crates/reeve-engine",
    "crates/reeve-renderer",
    "crates/reeve-intervention",
    "crates/reeve-sdk",
]
resolver = "2"

# Shared publish metadata: crates.io needs license, repository, and a
# description per crate; everything common inherits from here.
[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/Dancode-188/reeve"
edition = "2024"
version = "0.6.0"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tonic = { version = "0.14", features = ["transport"] }
ratatui = "0.29"
crossterm = "0.28"
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
evalexpr = "13"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
