[package]
name = "reeve-engine"
version = "0.6.0"
edition = "2024"

[dependencies]
reeve-model = { path = "../reeve-model" }
reeve-storage = { path = "../reeve-storage" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
evalexpr = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
