[package]
name = "reeve-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reeve's evaluation engine: heuristics, LLM judge, policy rules, and budgets"
readme = "README.md"

[lints]
workspace = true

[dependencies]
reeve-model = { path = "../reeve-model" }
reeve-storage = { path = "../reeve-storage" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
evalexpr = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
