[package]
name = "reeve-ingestion"
version = "0.3.0"
edition = "2024"

[dependencies]
reeve-model = { path = "../reeve-model" }
reeve-storage = { path = "../reeve-storage" }
opentelemetry-proto = { version = "0.32.0", features = ["gen-tonic", "trace"] }
tonic = { workspace = true }
tonic-health = "0.14.6"
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
