[package]
name = "reeve-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reeve's ingestion: OTLP receiver, Anthropic HTTP proxy, and the span pipeline"
readme = "README.md"

[lints]
workspace = true

[dependencies]
reeve-model = { path = "../reeve-model", version = "1.0.0" }
reeve-storage = { path = "../reeve-storage", version = "1.0.0" }
opentelemetry-proto = { version = "0.32.0", features = ["gen-tonic", "trace"] }
tonic = { workspace = true }
axum = "0.8"
reqwest = { workspace = true, features = ["stream"] }
futures-util = "0.3"
tokio-stream = "0.1"
tonic-health = "0.14.6"
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
