[package]
name = "reeve-intervention"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reeve's control plane: command dispatch, acks, and the audit log"
readme = "README.md"

[lints]
workspace = true

[dependencies]
reeve-model = { path = "../reeve-model" }
reeve-storage = { path = "../reeve-storage" }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
tonic-prost = "0.14"
prost = "0.14"
tracing = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
