[package]
name = "reeve-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared entities, IDs, and signal types for the Reeve cockpit"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
