[package]
name = "reeve-renderer"
version = "0.4.0"
edition = "2024"

[dependencies]
serde_json = { workspace = true }
reeve-model = { path = "../reeve-model" }
reeve-storage = { path = "../reeve-storage" }
reeve-intervention = { path = "../reeve-intervention" }
ratatui = { workspace = true }
crossterm = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
