[package]
name = "reeve-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reeve's terminal UI: the cockpit panels, replay, and keybindings"
readme = "README.md"

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
reeve-model = { path = "../reeve-model" }
reeve-storage = { path = "../reeve-storage" }
reeve-intervention = { path = "../reeve-intervention" }
ratatui = { workspace = true }
crossterm = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
