[package]
name = "reeve-sdk"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
tonic-prost = "0.14"
prost = "0.14"
tracing = { workspace = true }
thiserror = { workspace = true }
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
[build-dependencies]
tonic-prost-build = "0.14"
