[package]
name = "reeve-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for agents observed by the Reeve cockpit"
readme = "README.md"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
tonic-prost = "0.14"
prost = "0.14"
tracing = { workspace = true }
thiserror = { workspace = true }
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
[build-dependencies]
tonic-prost-build = "0.14"
