[package]
name = "reeve-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reeve's storage tiers: hot ring buffer and warm SQLite store"
readme = "README.md"

[lints]
workspace = true

[dependencies]
reeve-model = { path = "../reeve-model" }
rusqlite = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
