[package]
# The crates.io name; `reeve` there is an unrelated earlier project.
# The installed binary keeps the real name via [[bin]] below.
name = "reeve-cockpit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal cockpit for AI agents: watch, score, and intervene in real time"
readme = "README.md"

[[bin]]
name = "reeve"
path = "src/main.rs"

[dependencies]
reeve-ingestion = { path = "../reeve-ingestion" }
reeve-engine = { path = "../reeve-engine" }
reeve-intervention = { path = "../reeve-intervention" }
reeve-renderer = { path = "../reeve-renderer" }
reeve-storage = { path = "../reeve-storage" }
reeve-model = { path = "../reeve-model" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
