[package]
# The crates.io name; `reeve` there is an unrelated earlier project.
# The installed binary keeps the real name via [[bin]] below.
name = "reeve-cockpit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal cockpit for AI agents: watch, score, and intervene in real time"
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "reeve"
path = "src/main.rs"

[dependencies]
reeve-ingestion = { path = "../reeve-ingestion", version = "1.0.0" }
reeve-engine = { path = "../reeve-engine", version = "1.0.0" }
reeve-intervention = { path = "../reeve-intervention", version = "1.0.0" }
reeve-renderer = { path = "../reeve-renderer", version = "1.0.0" }
reeve-storage = { path = "../reeve-storage", version = "1.0.0" }
reeve-model = { path = "../reeve-model", version = "1.0.0" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
