[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reeve"
version = "0.1.0"
description = "Python SDK for the Reeve AI agent cockpit"
readme = "../../README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
openai-agents = ["openai-agents>=0.1"]

[project.urls]
Homepage = "https://github.com/Dancode-188/reeve"
Repository = "https://github.com/Dancode-188/reeve"
